--- a/Aliha.html
+++ b/Aliha.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>[Your Name] — Portfolio</title>
+  <title>[Aliha Waseem] — Portfolio</title>
   <meta name="description" content="Personal portfolio of [Your Name] — projects, skills, and contact." />
-  <!-- Add your CSS file later: <link rel="stylesheet" href="style.css"> -->
-  <!-- Add favicon if you have one -->
+  <<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- ====== Header / Navigation ====== -->
   <header id="header" role="banner">
     <nav role="navigation" aria-label="Main navigation">
-      <a class="logo" href="#home">[Your Name]</a>
+      <a class="logo" href="#home">[Aliha Waseem]</a>
       <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false">Menu</button>
       <ul id="main-nav" class="nav-list">
         <li><a href="#home">Home</a></li>
