--- a/Aliha.html
+++ b/Aliha.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>[Aliha Waseem] — Portfolio</title>
   <meta name="description" content="Personal portfolio of [Your Name] — projects, skills, and contact." />
-  <<link rel="stylesheet" href="style.css">
+  <<link rel="stylesheet" href="Aliha.css">
 </head>
 <body>
   <!-- ====== Header / Navigation ====== -->
