--- a/Aliha.html
+++ b/Aliha.html
@@ -12,7 +12,9 @@
   <header id="header" role="banner">
     <nav role="navigation" aria-label="Main navigation">
       <a class="logo" href="#home">[Aliha Waseem]</a>
-      <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false">Menu</button>
+      <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false">
+       ☰
+      </button>
       <ul id="main-nav" class="nav-list">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
