--- a/Aliha.html
+++ b/Aliha.html
@@ -29,12 +29,12 @@
   <main>
     <section id="home" class="section home" aria-labelledby="home-heading">
       <div class="container">
-        <h1 id="home-heading">Hello — I'm <strong>[Your Name]</strong></h1>
-        <p class="lead">Web Developer • MERN Stack Enthusiast • Problem Solver</p>
+        <h1 id="home-heading">Hello — I'm <strong>[Aliha Waseem]</strong></h1>
+        <p class="lead">Web Developer •  Problem Solver • Web Designer</p>
         <p>Welcome to my portfolio. Scroll down to see my work and skills.</p>
         <!-- Replace with your profile image later -->
         <figure class="hero-image" aria-hidden="true">
-          <img src="assets/profile-placeholder.png" alt="[Your Name] profile picture (replace me)" />
+          <img src="assets/profile-placeholder.png" alt="[Aliha Waseem] profile picture (replace me)" />
         </figure>
         <p><a href="#projects" class="cta">View Projects</a></p>
       </div>
@@ -45,16 +45,16 @@
       <div class="container">
         <h2 id="about-heading">About Me</h2>
         <p>
-          I'm [Your Name], a developer from [Your City]. I build responsive and accessible web applications.
+          I'm [Aliha], a developer from [Siakot]. I build responsive and accessible web applications.
           I enjoy learning new technologies and turning ideas into real products.
         </p>
 
         <h3>Quick Facts</h3>
         <ul class="facts">
-          <li>🎓 Education: [Your Degree / School]</li>
-          <li>💼 Role: [Student / Freelance / Junior Developer / etc.]</li>
-          <li>📍 Location: [City, Country]</li>
-          <li>🛠️ Focus: MERN Stack, HTML, CSS, JavaScript</li>
+          <li>🎓 Education: [Studing in Tenth Grade]</li>
+          <li>💼 Role: [Student / Freelance / Junior Developer ]</li>
+          <li>📍 Location: [Sialkot, Pakistan]</li>
+          <li>🛠️ Focus: HTML, CSS, JavaScript, Python(Flask), Php, C/C++, Sql,  </li>
         </ul>
       </div>
     </section>
@@ -138,7 +138,7 @@
           </article>
         </div>
 
-        <p class="more-projects">More projects on my <a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a>.</p>
+        <p class="more-projects">More projects on my <a href="https://github.com/aliha835" target="_blank" rel="noopener">GitHub</a>.</p>
       </div>
     </section>
 
@@ -178,7 +178,9 @@
       </div>
     </section>
   </main>
+  <script src="script.js"></script>
 
+</body>
   <!-- ====== Footer ====== -->
   <footer role="contentinfo">
     <div class="container">
@@ -187,12 +189,5 @@
     </div>
   </footer>
 
-  <!-- Add your JS file later: <script src="script.js"></script> -->
-  <!-- Small inline fallback for accessibility: set year without JS later with server or manually -->
-  <noscript>
-    <style>
-      /* Optional: basic fallback styles can be applied later in CSS */
-    </style>
-  </noscript>
-</body>
+
 </html>
