--- a/Aliha.html
+++ b/Aliha.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>[Aliha Waseem] — Portfolio</title>
-  <meta name="description" content="Personal portfolio of [Your Name] — projects, skills, and contact." />
+  <meta name="description" content="Personal portfolio of [Aliha Waseem] — projects, skills, and contact." />
   <<link rel="stylesheet" href="Aliha.css">
 </head>
 <body>
