--- a/index.html
+++ b/index.html
@@ -5,280 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>[Aliha Waseem] — Portfolio</title>
   <meta name="description" content="Personal portfolio of [Aliha Waseem] — projects, skills, and contact."> 
-  <style>
-    /* ========== Reset & Base Styles ========== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Segoe UI", Arial, sans-serif;
-  background-color: #121212;
-  color: #f0f0f0;
-  line-height: 1.6;
-}
-
-/* Containers */
-.container {
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-  padding: 2rem 0;
-}
-
-/* ========== Navigation ========== */
-header {
-  background: #1e1e1e;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  border-bottom: 1px solid #333;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-}
-
-nav .logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #00ffcc;
-  text-decoration: none;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 1.5rem;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #f0f0f0;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-  color: #00ffcc;
-}
-
-/* Mobile nav button (hidden by default) */
-.nav-toggle {
-  display: none;
-  background: none;
-  border: none;
-  font-size: 1.2rem;
-  color: #f0f0f0;
-}
-
-/* ========== Sections ========== */
-.section {
-  padding: 4rem 0;
-  border-bottom: 1px solid #2a2a2a;
-}
-
-.section h2 {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  color: #00ffcc;
-}
-
-.section p {
-  margin-bottom: 1rem;
-}
-
-/* ========== Home Section ========== */
-.home {
-  text-align: center;
-}
-
-.home h1 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.home .lead {
-  font-size: 1.2rem;
-  color: #ccc;
-}
-
-.hero-image img {
-  margin-top: 1.5rem;
-  max-width: 180px;
-  border-radius: 50%;
-  border: 3px solid #00ffcc;
-}
-
-.cta {
-  display: inline-block;
-  margin-top: 1.5rem;
-  padding: 0.75rem 1.5rem;
-  background: #00ffcc;
-  color: #121212;
-  font-weight: bold;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: background 0.3s ease;
-}
-
-.cta:hover {
-  background: #00ccaa;
-}
-
-/* ========== About Section ========== */
-.facts {
-  list-style: none;
-  margin-top: 1rem;
-}
-
-.facts li {
-  margin: 0.5rem 0;
-}
-
-/* ========== Skills Section ========== */
-.skills-grid {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-
-.skill {
-  background: #1e1e1e;
-  padding: 1rem;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
-}
-
-.skill:hover {
-  transform: translateY(-5px);
-}
-
-/* ========== Projects Section ========== */
-.projects-grid {
-  display: grid;
-  gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-}
-
-.project-card {
-  background: #1e1e1e;
-  padding: 1.5rem;
-  border-radius: 12px;
-  transition: transform 0.3s ease, background 0.3s ease;
-}
-
-.project-card h3 {
-  margin-bottom: 0.5rem;
-}
-
-.project-card a {
-  color: #00ffcc;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.project-card:hover {
-  transform: translateY(-6px);
-  background: #222;
-}
-
-.more-projects {
-  margin-top: 1.5rem;
-}
-
-/* ========== Contact Section ========== */
-form {
-  display: grid;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.form-row {
-  display: flex;
-  flex-direction: column;
-}
-
-input, textarea {
-  padding: 0.75rem;
-  border: none;
-  border-radius: 6px;
-  background: #1e1e1e;
-  color: #f0f0f0;
-}
-
-input:focus, textarea:focus {
-  outline: 2px solid #00ffcc;
-}
-
-button[type="submit"] {
-  padding: 0.75rem;
-  border: none;
-  border-radius: 6px;
-  background: #00ffcc;
-  color: #121212;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-button[type="submit"]:hover {
-  background: #00ccaa;
-}
-
-.contact-details p {
-  margin-top: 1rem;
-}
-
-/* ========== Footer ========== */
-footer {
-  text-align: center;
-  padding: 1rem;
-  background: #1e1e1e;
-  color: #888;
-}
-
-/* ========== Responsive Design ========== */
-@media (max-width: 768px) {
-  nav ul {
-    display: none;
-    flex-direction: column;
-    background: #1e1e1e;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    width: 200px;
-    padding: 1rem;
-    border: 1px solid #333;
-  }
-
-  nav ul.show {
-    display: flex;
-  }
-
-  .nav-toggle {
-    display: block;
-  }
-}
-
-@media (max-width: 480px) {
-  .home h1 {
-    font-size: 1.8rem;
-  }
-  .section h2 {
-    font-size: 1.5rem;
-  }
-}
-  </style>
+  <link href = "styles.css" rel = "stylesheet">
 </head>
 <body>
   <!-- ====== Header / Navigation ====== -->
