--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>[Aliha Waseem] — Portfolio</title>
-  <meta name="description" content="Personal portfolio of [Aliha Waseem] — projects, skills, and contact."> 
+  <title>Aliha Waseem — Portfolio</title>
+  <meta name="description" content="Personal portfolio of Aliha Waseem — projects, skills, and contact."> 
   <link href = "styles.css" rel = "stylesheet">
 </head>
 <body>
   <!-- ====== Header / Navigation ====== -->
   <header id="header" role="banner">
     <nav role="navigation" aria-label="Main navigation">
-      <a class="logo" href="#home">[Aliha Waseem]</a>
+      <a class="logo" href="#home">Aliha Waseem</a>
       <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false">
        ☰
       </button>
@@ -29,13 +29,11 @@
   <main>
     <section id="home" class="section home" aria-labelledby="home-heading">
       <div class="container">
-        <h1 id="home-heading">Hello — I'm <strong>[Aliha Waseem]</strong></h1>
+        <h1 id="home-heading">Hello — I'm <strong>Aliha Waseem</strong></h1>
         <p class="lead">Web Developer •  Problem Solver • Web Designer</p>
         <p>Welcome to my portfolio. Scroll down to see my work and skills.</p>
         <!-- Replace with your profile image later -->
-        <figure class="hero-image" aria-hidden="true">
-          <img src="assets/profile-placeholder.png" alt="[Aliha Waseem] profile picture (replace me)" />
-        </figure>
+        
         <p><a href="#projects" class="cta">View Projects</a></p>
       </div>
     </section>
@@ -45,7 +43,7 @@
       <div class="container">
         <h2 id="about-heading">About Me</h2>
         <p>
-          I'm [Aliha], a developer from [Siakot]. I build responsive and accessible web applications.
+          I'm [Aliha], a developer from Siakot. I build responsive and accessible web applications.
           I enjoy learning new technologies and turning ideas into real products.
         </p>
 
@@ -138,7 +136,7 @@
           </article>
         </div>
 
-        <p class="more-projects">More projects on my <a href="https://github.com/aliha835" target="_blank" rel="noopener">GitHub</a>.</p>
+        <p class="more-projects">More projects on my <a href="https://github.com/AlihaWaseem" target="_blank" rel="noopener">GitHub</a>.</p>
       </div>
     </section>
 
@@ -171,9 +169,9 @@
         </form>
 
         <div class="contact-details" aria-hidden="false">
-          <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-          <p>Location: [City, Country]</p>
-          <p>Find me on: <a href="https://github.com/your-username" target="_blank" rel="noopener">GitHub</a> • <a href="#" target="_blank" rel="noopener">LinkedIn</a></p>
+          <p>Email: <a href="mailto:alihawaseem02@gmail.com">youremail@example.com</a></p>
+          <p>Location: Sialkot , Pakistan</p>
+          <p>Find me on: <a href="https://github.com/AlihaWaseem" target="_blank" rel="noopener">GitHub</a> • <a href="https://www.linkedin.com/in/alihawaseem/" target="_blank" rel="noopener">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -184,7 +182,7 @@
   <!-- ====== Footer ====== -->
   <footer role="contentinfo">
     <div class="container">
-      <p>&copy; <span id="year"></span> [Your Name]. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> Aliha Waseem. All rights reserved.</p>
       <!-- We'll set the year via JS later. -->
     </div>
   </footer>
