--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
       <div class="container">
         <h2 id="about-heading">About Me</h2>
         <p>
-          I'm [Aliha], a developer from Siakot. I build responsive and accessible web applications.
+          I'm Aliha, a developer from Siakot. I build responsive and accessible web applications.
           I enjoy learning new technologies and turning ideas into real products.
         </p>
 
         <h3>Quick Facts</h3>
         <ul class="facts">
-          <li>🎓 Education: [Studing in Tenth Grade]</li>
-          <li>💼 Role: [Student / Freelance / Junior Developer ]</li>
-          <li>📍 Location: [Sialkot, Pakistan]</li>
+          <li>🎓 Education: Studing in Tenth Grade</li>
+          <li>💼 Role: Student / Freelance / Junior Developer </li>
+          <li>📍 Location: Sialkot, Pakistan</li>
           <li>🛠️ Focus: HTML, CSS, JavaScript, Python(Flask), Php, C/C++, Sql,  </li>
         </ul>
       </div>
@@ -169,7 +169,7 @@
         </form>
 
         <div class="contact-details" aria-hidden="false">
-          <p>Email: <a href="mailto:alihawaseem02@gmail.com">youremail@example.com</a></p>
+          <p>Email: <a href="mailto:alihawaseem02@gmail.com">alihawaseem02@gmail.com</a></p>
           <p>Location: Sialkot , Pakistan</p>
           <p>Find me on: <a href="https://github.com/AlihaWaseem" target="_blank" rel="noopener">GitHub</a> • <a href="https://www.linkedin.com/in/alihawaseem/" target="_blank" rel="noopener">LinkedIn</a></p>
         </div>
