--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li>🎓 Education: Studing in Tenth Grade</li>
           <li>💼 Role: Student / Freelance / Junior Developer </li>
           <li>📍 Location: Sialkot, Pakistan</li>
-          <li>🛠️ Focus: Python(Flask) Developer · Javascript Developer · HTML Developer · Web Design Specialist · C++ Developer · Html & Css · PHP developer </li>
+          <li>🛠️ Focus: Python(Flask) Developer · Javascript Developer · HTML & Css Developer · Web Design Specialist · C++ Developer ·  PHP developer </li>
         </ul>
       </div>
     </section>
